--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,11 @@
 			<version>5.2.3</version>
 		</dependency>
 		<dependency>
+		<groupId>com.github.librepdf</groupId>
+		<artifactId>openpdf</artifactId>
+		<version>1.3.41</version>
+		</dependency>
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
