--- a/pom.xml
+++ b/pom.xml
@@ -67,9 +67,8 @@
 			<version>3.5.1</version>
 		</dependency>
 		<dependency>
-		<groupId>jakarta.validation</groupId>
-		<artifactId>jakarta.validation-api</artifactId>
-		<version>3.0.2</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
