--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,15 @@
 master:
   datasource:
-    url: jdbc:mysql://localhost:3306/master_db
-    username: root
-    password: Sajid7254@
+    url: jdbc:mysql://209.209.40.85:19783/master_db
+    username: admin
+    password: gqa6vDtX
 
 provisioning:
   datasource:
-    host: "localhost"
-    username: root
-    password: Sajid7254@
-    port: "3306"
+    host: "209.209.40.85"
+    username: admin
+    password: gqa6vDtX
+    port: "19783"
 
 spring:
   jpa:
